fix affix z-index, spinner as loading

--- a/src/cms/views/container.less
+++ b/src/cms/views/container.less
@@ -175,5 +175,5 @@
 }
 
 .ant-affix {
-  z-index: 2;
+  z-index: 4;
 }
